<resources>
    <string name="app_name">MyDBcode</string>

    <string name="app_title">My Personal Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="button_1">Add Contact</string>
    <string name="button_2">View Contact</string>
    <string name="button_3">Search Contact</string>
    <string name="button_4">Update Contact</string>
    <string name="button_5">Delete Contact</string>
    <string name="logout_id">Sign out</string>



    <string name="title_activity_new_contact">NewContactActivity</string>
    <string name="new_user_id">Add new user information</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_mobile">Mobile Number</string>
    <string name="contact_email">Email Address</string>
    <string name="saveContact">Save</string>
    <string name="title_activity_data_list">DataListActivity</string>



    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_contact">SearchContactActivity</string>
    <string name="search_name">Enter Name</string>
    <string name="search_button">SEARCH</string>
    <string name="display_email">Email here...</string>
    <string name="display_mob">Mobile here.....</string>
    <string name="delete_button">Delete</string>


    <string name="title_activity_update_contact">UpdateContactActivity</string>
    <string name="Update_search_name">Enter Name</string>
    <string name="Upadte_search_button">SEARCH</string>
    <string name="Update_Contact">UPDATE DETAILS</string>
    <string name="Update_name">Name....</string>
    <string name="Upadate_email">Email...</string>
    <string name="Update_mob">Mobile.....</string>
    <string name="Update_button">UPDATE</string>


</resources>
